<resources>
    <string name="app_name">PetTracker</string>
    <string name="title_activity_locator">Locator</string>

    <array name="menu">
        <item>titre 1</item>
        <item>titre 2</item>
        <item>titre 3</item>
    </array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>


    <string name="manage_zones">Gestion des zones</string>
    <string name="manage_modules">Gestion des modules</string>
    <string name="tracking_modules">Suivi des modules</string>
    <string name="title_activity_zone_adder">Ajouter une zone</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_module_associer">Associer un module</string>
    <string name="delete">delete</string>

    <string name="module_list">Modules associés</string>

    <string name="associer_module">Associer un module</string>
    <string name="supprimer_zone">Supprimer la zone</string>
    <string name="activer_zone">Activer la zone</string>
    <string name="desactiver_zone">Désactiver la zone</string>

    <string name="choisir_action">Choisir une action</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enter_name">Entrez le nom de la zone</string>
    <string name="annuler">Annuler</string>
    <string name="valider">Valider</string>
    <string name="confirmer">Confirmer</string>
</resources>
