<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_associer_module"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/associer_module"/>

    <Button
        android:id="@+id/btn_supprimer_zone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/supprimer_zone"/>

    <Button
        android:id="@+id/btn_activer_zone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activer_zone"/>

</LinearLayout>
